Fixed some bugs with the header dark mode, and preloader, also with displaying elements with adnimation.

--- a/public/assets/css/dark.css
+++ b/public/assets/css/dark.css
@@ -218,14 +218,14 @@ body.dark-skin {
 **/
 
 @media screen and (max-width: 1200px) {
-	/* .dark-skin .header.sticky {
+	 .dark-skin .header.sticky {
 		background: #1d222a;
 	}
 }
 
 .dark-skin .header.sticky .navbar.default:before {
 	background: #1d222a;
-} */
+} 
 
 .dark-skin .menu-btn span {
 	background: #fff;
