--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1176,7 +1176,7 @@ hr {
 	top: -20vh;
 	width: 120vw;
 	height: 120vh;
-	background: #fff;
+	background: #F0EBE3;
 }
 
 .preloader .spinner {
@@ -1528,15 +1528,15 @@ hr {
 .header {
 	padding: 30px;
 	position: fixed;
-	transition: shadow 0.3s ease;
+	transition: shadow 0.3s linear;
 	left: 0;
 	top: 0;
 	width: 100%;
 	z-index: 90;
-	transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
+	/* transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
 	-moz-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
 	-webkit-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
-	-o-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
+	-o-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1); */
 }
 @media screen and (max-width: 768px) {
 	.header {
@@ -5679,6 +5679,4 @@ a.wp-block-button__link {
 	background-color: transparent; /* Transparent background */
 	display: inline-block; /* Ensures it behaves like a circle */
   }
-  /* .shadows {
-	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.099);
-  } */
+ 
